<resources>
    <string name="app_name">TeleCare</string>
    <string name="teleMedicine">Telemedicine App</string>
    <string name="next">Next</string>
    <string name="login">Login</string>
    <string name="register">Register</string>
    <string name="send">Send</string>
    <string name="submit">Submit</string>
    <string name="update">Update</string>
    <string name="delete">Delete</string>
    <string name="confirm">Confirm</string>
    <string name="calculate">Calculate</string>
    <string name="addFood">Add Food</string>
    <string name="signOut">Sign Out</string>
    <string name="share">Share</string>
    <string name="forgotPassword">Forgot password?</string>
    <string name="currentLocation">Use Current Location</string>
    <string name="phoneTitle">Phone</string>
    <string name="nameTitle">Full Name</string>
    <string name="ageTitle">Age</string>
    <string name="emailTitle">Email</string>
    <string name="genderTitle">Sex</string>
    <string name="addressTitle">Address</string>
    <string name="districtTitle">District</string>
    <string name="upazilaTitle">Upazila</string>
    <string name="postalCodeTitle">Postal Code</string>
    <string name="countryTitle">Country</string>
    <string name="chooseAction">Choose Action</string>
    <string name="camera">Camera</string>
    <string name="gallery">Gallery</string>
    <string name="morning">Good Morning</string>
    <string name="afternoon">Good Afternoon</string>
    <string name="evening">Good Evening</string>
    <string name="hello">Hello</string>
    <string name="profile">Profile</string>
    <string name="fileShare">File Share</string>
    <string name="settings">Settings</string>
    <string name="notification">Notification</string>
    <string name="about">About</string>
    <string name="iotDevice">Iot Device</string>
    <string name="calculation">Calculation</string>
    <string name="approve">Approve</string>
    <string name="remove">Remove</string>
    <string name="removeFood">Remove Food</string>
    <string name="removeTiming">Remove Timing</string>
    <string name="removeFoods">Remove Foods</string>
    <string name="cancelAppointment">Appointment Cancellation</string>
    <string name="Assistant">Assistant</string>
    <string name="timings">Timings</string>
    <string name="weekdays">Weekdays</string>
    <string name="foodsTitle">Foods</string>
    <string name="foods">foods</string>
    <string name="set">Set</string>
    <string name="add">Add</string>
    <string name="chat">Chat</string>
    <string name="chats">Chats</string>
    <string name="home">Home</string>
    <string name="second">Sec</string>
    <string name="minute">Min</string>
    <string name="hour">HR</string>
    <string name="day">Day</string>
    <string name="additional">Additional</string>
    <string name="appraisalAndFeedback">Appraisal &amp; Feedback</string>
    <string name="shareAPkVia">Share Apk Via</string>
    <string name="select_CoverPhoto">Select Cover photo</string>
    <string name="select_ProfilePhoto">Select Profile photo</string>
    <string name="select_UserPhoto">Select Your Photo</string>
    <string name="select_Photo">Select Photo</string>
    <string name="select_FoodPhoto">Select Food Photo</string>
    <string name="select_ReportPhoto">Select Report Photo</string>
    <string name="select_NidPhoto">Select Your NID</string>
    <string name="select_TimeSlot">Please, Select time slot</string>
    <string name="yrs">Yrs</string>
    <string name="preferences">Preferences</string>
    <string name="allowNotifications">Allow Notifications</string>
    <string name="permissions">Permissions</string>
    <string name="phoneCallAccess">Phone Call Access</string>
    <string name="callPermission">Call Permission</string>
    <string name="locationAccess">Location Access</string>
    <string name="locationPermission">Location Permission</string>
    <string name="cameraAccess">Camera Access</string>
    <string name="cameraPermission">Camera Permission</string>
    <string name="galleryAccess">Gallery Access</string>
    <string name="galleryPermission">Gallery Permission</string>
    <string name="patientTitle">Patient</string>
    <string name="patients">Patients</string>
    <string name="reviews">Reviews</string>
    <string name="doctorTitle">Doctor</string>
    <string name="adminTitle">Admin</string>
    <string name="doctors">Doctors</string>
    <string name="presentAddress">Present Address</string>
    <string name="practiceAddress">Practice Address</string>
    <string name="personalDetails">Personal Details</string>
    <string name="academicDetails">Academic Details</string>
    <string name="professionalDetails">Professional Details</string>
    <string name="forgot">Forgot</string>
    <string name="yourPassword">Your Password!</string>
    <string name="giveFeedback">Give Feedback</string>
    <string name="view">View</string>
    <string name="yourBmi">Your BMI</string>
    <string name="addYour">Add Your</string>
    <string name="sugarLevel">Sugar Level</string>
    <string name="footSteps">Foot Steps</string>
    <string name="upload">Upload</string>
    <string name="yourReport">Your Report</string>
    <string name="toYourDoctor">To Your Doctor!</string>
    <string name="toYourPatient">To Your Patient!</string>
    <string name="activeNow">Active Now</string>
    <string name="male">Male</string>
    <string name="female">Female</string>
    <string name="any">Any</string>
    <string name="Requests">Requests</string>
    <string name="experience">Experience</string>
    <string name="appraisals">Appraisals</string>
    <string name="aboutDoctor">About Doctor</string>
    <string name="workingTime">Working Time</string>
    <string name="communication">Communication</string>
    <string name="messaging">Messaging</string>
    <string name="audioCall">Audio Call</string>
    <string name="videoCall">Video Call</string>
    <string name="min">Min</string>
    <string name="max">Max</string>
    <string name="apply">Apply</string>
    <string name="search">Search</string>
    <string name="doctorRightNow">Doctor Right Now!</string>
    <string name="viewAll">View all</string>
    <string name="all">All</string>
    <string name="report">Report</string>
    <string name="reports">Reports</string>
    <string name="medicalReports">Medical Reports</string>
    <string name="deviceReports">Device Reports</string>
    <string name="rememberMe">Remember me</string>
    <string name="password">Password</string>
    <string name="awards">Awards</string>
    <string name="FoodAmount">Food Amount</string>
    <string name="newFood">New Food</string>
    <string name="dailyFoods">Daily Foods</string>
    <string name="newType">New Type</string>
    <string name="appointmentTiming">Timing</string>
    <string name="appointmentTimings">Appointment Timings</string>
    <string name="bullet">&#8729;</string>
    <string name="foodChart">Specialty</string>
    <string name="consultation">consultation</string>
    <string name="schedule">Schedule</string>
    <string name="appointments">Appointments</string>
    <string name="appointment">Appointment</string>
    <string name="setAppointment">Set Appointment</string>
    <string name="bookAppointment">Book Appointment</string>
    <string name="todaysAppointment">Today\'s Appointment</string>
    <string name="noAppointment">No appointment available</string>
    <string name="availableTime">Available Time</string>
    <string name="patientDetails">Patient Details</string>
    <string name="assistant">Assistant</string>
    <string name="timeslot">Timeslot</string>
    <string name="date_Hint">Today</string>
    <string name="name_Hint">Name</string>
    <string name="patientName_Hint">Patient Name</string>
    <string name="patientAge_Hint">Patient Age</string>
    <string name="email_Hint">Email</string>
    <string name="phone_Hint">Phone</string>
    <string name="password_Hint">Password</string>
    <string name="confirmPassword_Hint">Confirm Password</string>
    <string name="activity_Hint">Activity Level</string>
    <string name="maritalStatus_Hint">Marital Status</string>
    <string name="gender_Hint">Sex</string>
    <string name="dob_Hint">Date of Birth</string>
    <string name="additional_Hint">Additional Info</string>
    <string name="food_Hint">Food</string>
    <string name="startWeekday_Hint">Day (Start)</string>
    <string name="endWeekday_Hint">Day (End)</string>
    <string name="startTime_Hint">Time (Start)</string>
    <string name="endTime_Hint">Time (End)</string>
    <string name="shift_Hint">Time/Meal</string>
    <string name="place_Hint">Chamber Address</string>
    <string name="chamberAddress_Hint">Chamber Address</string>
    <string name="foodName_Hint">Food Name</string>
    <string name="foodType_Hint">Food Type</string>
    <string name="carboHydrate_Hint">Carbohydrate</string>
    <string name="quantity_Hint">Quantity</string>
    <string name="calories_Hint">Calories</string>
    <string name="fat_Hint">Fat</string>
    <string name="vitaminA_Hint">Vitamin A</string>
    <string name="vitaminC_Hint">Vitamin C</string>
    <string name="calcium_Hint">Calcium</string>
    <string name="saturatedFat_Hint">Saturated Fat</string>
    <string name="cholesterol_Hint">Cholesterol</string>
    <string name="sugars_Hint">Sugars</string>
    <string name="Protein_Hint">Protein</string>
    <string name="height_Hint">Height</string>
    <string name="feet_Hint">ft</string>
    <string name="kg_Hint">kg</string>
    <string name="weight_Hint">Weight</string>
    <string name="language_Hint">Languages</string>
    <string name="bio_Hint">Describe your professional bio…</string>
    <string name="awards_Hint">Give details about any awards, publications or training (if any)…</string>
    <string name="qualification_Hint">Qualifications</string>
    <string name="specialty_Hint">Specialty</string>
    <string name="Specialist_Hint">Specialists</string>
    <string name="nid_Hint">NID No.</string>
    <string name="bmdc_Hint">BMDC Reg No.</string>
    <string name="bmi_Hint">BMI</string>
    <string name="sugar">Sugar</string>
    <string name="steps">Foot Steps</string>
    <string name="consultationFees_Hint">Consultation Fees</string>
    <string name="address_Hint">Address</string>
    <string name="country_Hint">Country</string>
    <string name="district_Hint">District</string>
    <string name="upazila_Hint">Upazila</string>
    <string name="postalCode_Hint">Postal Code</string>
    <string name="message_Hint">Type a message…</string>
    <string name="writeHere_Hint">Write here…</string>
    <string name="tellUs_Hint">Please, tell us more…</string>
    <string name="writeYourProblem">Please, write your problem…</string>
    <string name="notesTitle">Notes</string>
    <string name="title_Hint">Title</string>
    <string name="me">Me</string>
    <string name="lbm_Hint">Lean Body Mass</string>
    <string name="lbm">LBM</string>
    <string name="lfm_Hint">Lean Fat Mass</string>
    <string name="lfm">LFM</string>
    <string name="sugar_Hint">Sugar Level</string>
    <string name="searchForDoctors">Search for doctors</string>
    <string name="searchByName">Search by name/specialty</string>
    <string name="availability">Availability</string>
    <string name="latestBlog">Latest Blog</string>
    <string name="dummyContactNo">01523456…</string>
    <string name="dummyBmdcNo">Without A-(like 1,2,3)</string>
    <string name="zero">0</string>
    <string name="addDoctor">Add Doctor</string>
    <string name="cancelRequest">Cancel Request</string>
    <string name="follow">Follow</string>
    <string name="unfollow">Unfollow</string>
    <string name="addSugarMessage">Add your blood sugar levels on a daily basis</string>
    <string name="title_foods">Foods</string>
    <string name="title_chats">Chats</string>
    <string name="title_doctors">Doctors</string>
</resources>