<?xml version="1.0" encoding="utf-8"?>
<com.telemedicine.telecare.wiget.ArcView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    app:layout_collapseMode="parallax"
    app:shape_arc_cropDirection="outside"
    app:shape_arc_height="@dimen/_12sdp"
    app:shape_arc_position="top"
    android:background="@android:color/transparent"
    tools:context=".fragment.AddSugarFragment">

    <androidx.appcompat.widget.LinearLayoutCompat
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/dialog_Background"
        android:orientation="vertical">

        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="?android:attr/actionBarSize"
            android:layout_marginTop="@dimen/margin_XXX_Large"
            android:paddingStart="@dimen/padding_Large"
            android:paddingEnd="@dimen/padding_Large"
            android:background="@color/activity_Background">

            <androidx.appcompat.widget.AppCompatImageView
                android:id="@+id/sugar.Back.Button"
                android:layout_width="?android:attr/actionBarSize"
                android:layout_height="match_parent"
                android:layout_gravity="start|center_vertical"
                android:padding="@dimen/padding_Large"
                android:adjustViewBounds="true"
                app:srcCompat="@drawable/ic_arrow_left"  />

        </FrameLayout>

        <androidx.core.widget.NestedScrollView
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <androidx.appcompat.widget.LinearLayoutCompat
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <androidx.appcompat.widget.LinearLayoutCompat
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/margin_XXX_Large"
                    android:orientation="vertical">

                    <androidx.appcompat.widget.AppCompatTextView
                        style="@style/TitleTvStyle"
                        android:fontFamily="@font/oxanium_light"
                        android:layout_marginBottom="@dimen/margin_Small"
                        android:text="@string/addYour"
                        android:textSize="@dimen/text_Size_XXX_Large" />

                    <androidx.appcompat.widget.AppCompatTextView
                        style="@style/TitleTvStyle"
                        android:layout_marginBottom="@dimen/margin_Small"
                        android:fontFamily="@font/oxanium_semi_bold"
                        android:text="@string/sugarLevel"
                        android:textSize="@dimen/text_Size_XXX_Large" />

                </androidx.appcompat.widget.LinearLayoutCompat>

                <androidx.appcompat.widget.AppCompatTextView
                    style="@style/TitleTvStyle"
                    android:layout_marginTop="@dimen/margin_Medium"
                    android:layout_marginStart="@dimen/margin_XXX_Large"
                    android:layout_marginEnd="@dimen/margin_XXX_Large"
                    android:layout_marginBottom="@dimen/margin_X_Large"
                    android:text="@string/addSugarMessage"
                    android:textColor="@color/font_Color_LightGray"
                    android:textSize="@dimen/text_Size_X_Small"
                    android:fontFamily="@font/oxanium_regular"/>


                <androidx.appcompat.widget.LinearLayoutCompat
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <androidx.appcompat.widget.AppCompatEditText
                        android:id="@+id/sugar.Date.Input"
                        style="@style/InputFieldStyle"
                        android:layout_weight="1"
                        android:layout_width="0dp"
                        android:layout_marginEnd="@dimen/margin_Small"
                        android:hint="@string/date_Hint"
                        android:inputType="none"/>

                    <androidx.appcompat.widget.AppCompatEditText
                        android:id="@+id/sugar.Level.Input"
                        style="@style/InputFieldStyle"
                        android:layout_weight="1"
                        android:layout_width="0dp"
                        android:layout_marginStart="@dimen/margin_Small"
                        android:hint="@string/sugar_Hint"
                        android:maxLength="3"
                        android:inputType="number"
                        android:digits="0123456789"/>

                </androidx.appcompat.widget.LinearLayoutCompat>

                <androidx.appcompat.widget.AppCompatButton
                    android:id="@+id/sugar.Add.Button"
                    style="@style/ButtonStyle"
                    android:text="@string/add"
                    android:textAlignment="center"
                    android:layout_marginTop="@dimen/margin_XXX_Large"
                    android:layout_marginBottom="@dimen/margin_XXX_Large" />

            </androidx.appcompat.widget.LinearLayoutCompat>

        </androidx.core.widget.NestedScrollView>

    </androidx.appcompat.widget.LinearLayoutCompat>

</com.telemedicine.telecare.wiget.ArcView>